Fix HTML encoding issues in education.html

--- a/education.html
+++ b/education.html
@@ -72,13 +72,14 @@
 
     <nav>
         <ul>
-            <li><a href="Network-Lab.html">Networking</a></li>
-            <li><a href="EH-lab.html">Ethical Hacking</a></li>
-            <li><a href="NPT-lab.html">Network Pen-testing</a></li>
-            <li><a href="AD-lab.html">AD Pen-testing</a></li>
+            <li><a href="network-lab.html">Networking</a></li>
+            <li><a href="eh-lab.html">Ethical Hacking</a></li>
+            <li><a href="npt-lab.html">Network Pen-testing</a></li>
+            <li><a href="ad-lab.html">AD Pen-testing</a></li>
         </ul>
     </nav>
 
 </body>
+
 
 </html>
