--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,8 @@
 
     
 
-    <link rel="stylesheet" href="/dashboard-style.css">
+    <link rel="stylesheet" href="dashboard-style.css">
 </body>
+
 
 </html>
