Fix HTML formatting and structure
Signed-off-by: Ratul Kirtania <167109004+rednoise795@users.noreply.github.com>

--- a/education.html
+++ b/education.html
@@ -65,7 +65,7 @@
 
 <body>
 
-    <a id="dash"href="/dashboard.html">dashboard</a>
+    <a id="dash"href="dashboard.html">dashboard</a>
     <h1>We are developing the all pages</h1>
 
     <h2>We will upload as soon as possible !!!</h2>
@@ -83,3 +83,4 @@
 
 
 </html>
+
