--- a/dashboard.html
+++ b/dashboard.html
@@ -54,7 +54,11 @@
     
 
     <link rel="stylesheet" href="dashboard-style.css">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </body>
 
 
 </html>
+
