--- a/education.html
+++ b/education.html
@@ -35,6 +35,7 @@
         nav {
             background-color: lightgray;
             text-align: center;
+            font-size: 22px;
         }
 
         nav ul {
@@ -83,4 +84,5 @@
 
 
 </html>
+
 
